--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
+<DOCTYPE! html>
+<html>
+	<head>
+		<title>Group Cheatsheet</title>
+	</head>
 
-<h1>Hello!</h1>
-<h1>Cheat Sheet</h1>
+	<body>
+		<h1>Group Cheatsheet</h1>
 
-<p>hello!</p>
+			<h2>Team Members</h2>
+				<ul>
+					<li>Grace</li>
+					<li>Lou</li>
+					<li>Pooja</li>
+				</ul>
 
-<h2> making further changes </h2>
+		
+
+
+	</body>
