--- a/index.html
+++ b/index.html
@@ -2,19 +2,55 @@
 <html>
 	<head>
 		<title>Group Cheatsheet</title>
+			<style>
+    			h1 { color: navy;
+    				font-family: 'Arial'; }
+    			p { font-family: 'Arial'; }
+
+    			h2 { color: turquoise; 
+    				font-family: 'Arial'; }
+    			h3 { font-family: 'Arial'; }
+  			</style>
 	</head>
 
 	<body>
 		<h1>Group Cheatsheet</h1>
+			<div>
+				<h2>Team Members</h2>
+					<ul>
+						<li>Grace</li>
+						<li>Lou</li>
+						<li>Pooja</li>
+					</ul>
 
-			<h2>Team Members</h2>
-				<ul>
-					<li>Grace</li>
-					<li>Lou</li>
-					<li>Pooja</li>
-				</ul>
+			</div>
 
-		
-
-
+			<div>
+				<h2>GitHub</h2>
+					<p>There are 3 key steps that must be remembered:
+						<ul>
+							<ol>1. Add git add --all</ol>
+							<ol>2. Commit git commit -m "Small changes"</ol>
+							<ol>3. Push git push</ol>
+						</ul>
+			</div>
+			<div>
+				<h2>HTML & CSS</h2>
+			</div>
+			<div>
+				<h2>Ruby</h2>
+			</div>
+			<div>
+				<h2>Resources</h2>
+					<h3>HTML/CSS</h3>
+						<p>
+							<ul>
+								<li>Codecademy</li>
+							</ul>
+						</p>
+					<h3>Ruby</h3>
+			</div>
 	</body>
+
+
+
