--- a/index.html
+++ b/index.html
@@ -29,16 +29,21 @@
 				<h2>GitHub</h2>
 					<p>There are 3 key steps that must be remembered:
 						<ul>
-							<ol>1. Add git add --all</ol>
-							<ol>2. Commit git commit -m "Small changes"</ol>
-							<ol>3. Push git push</ol>
+							<ol>1. ADD git add --all</ol>
+							<ol>2. COMMIT git commit -m "Small changes"</ol>
+							<ol>3. PUSH git push</ol>
 						</ul>
+					</p>
 			</div>
 			<div>
 				<h2>HTML & CSS</h2>
+					<p>
+					</p>
 			</div>
 			<div>
 				<h2>Ruby</h2>
+					<p>.rb signifies the use of Ruby. Ruby is a command line program that interprets and runs ruby files. It is often possible to write ruby in a way that reads a lot like English, it is an interpreted language - the ruby file is read in and executed in real time. IRB stands for interactive ruby. You can write ruby code in it and it will evaluate it. PUTS stands for 'put string'
+					</p>
 			</div>
 			<div>
 				<h2>Resources</h2>
